# convivial2

./: ProjectHome.md
samples/C2H4O/: stdin  stdout
samples/CF3H/: new_wat.fluo_ord1  stdout
samples/CH4_DM_Hrot_eff/: hameff2-omp.f90  rotcst.CH4.ord044-mu6Z  stdin
samples/Morse/: morse-pot  stdout
samples/SO2/: stdout
src/: CMakeLists.txt  basis-info.cpp  basis.cpp  basis.hpp  conviv-data.cpp  conviv-data.hpp  conviv-import.cpp  conviv-json.cpp  conviv.cpp  conviv.hpp  convivial.fl  main.cpp  main.hpp  mode.cpp  mode.hpp  modes.cpp  schoenflies.cpp
src/embed/: basis.js  doc.html  schoenflies.js
src/tests/: CMakeLists.txt
src/ui/: MFCI.cpp  basis.cpp  basis.hpp  cb-gen.cpp  cb-modes.cpp  messages.hpp
src/ui/python/: ExeSCFRun.py  Hierarchy.py  Pairing.py  Stop.py  model.py  out  step.py  test  test_modele.py
trunk/: makefile
trunk/samples/C2H4O/: stdin0
trunk/samples/CF3H/: stdin
trunk/samples/CH4_DM_Hrot_eff/: hameff.inp  makefile  stdout  watcor.CH4.ord044
trunk/samples/Morse/: stdin
trunk/samples/SO2/: stdin  watcor.SO2_o10.cor
trunk/src/: CMakeLists.txt  basis-info.hpp  conviv-data.cpp  conviv-json.cpp  conviv-json.hpp  conviv-validate.cpp  conviv.hpp  convivial.fl  main.cpp  main.hpp  mode.cpp  mode.hpp  modes.cpp  modes.hpp  schoenflies.hpp
trunk/src/embed/: basis.js  schoenflies.js
trunk/src/tests/: CMakeLists.txt  test-io.cpp
trunk/src/ui/: basis.cpp  cb-modes.cpp  cb-obs.cpp  cb-pot.cpp  cb-save.cpp  cb-sym.cpp  messages.cpp
trunk/src/ui/python/: ExeSimpleRun.py  modele.inp  modele.py  output.py  pairs.py  step.py  watcor.field
